@@ -1,6 +1,6 @@
 #
 #
-# $Id: indimail-mta.spec.in,v 1.309 2021-05-01 18:36:46+05:30 Cprogrammer Exp mbhangui $
+# $Id: indimail-mta.spec.in,v 1.310 2021-05-01 19:46:36+05:30 Cprogrammer Exp mbhangui $
 %undefine _missing_build_ids_terminate_build
 %global _unpackaged_files_terminate_build 1
 
@@ -335,7 +335,6 @@ fi
 %endif
 %{__mkdir_p} %{buildroot}%{qsysconfdir}/control/defaultqueue
 echo "%{_prefix}/sbin/qmail-qmqpc" > %{buildroot}%{qsysconfdir}/control/defaultqueue/QMAILQUEUE
-echo "root" > %{buildroot}%{qsysconfdir}/control/direct_mail_users
 
 # remove devel files as we are not building a devel package
 %{__rm} -rf %{buildroot}%{mandir}/man3
@@ -818,7 +817,6 @@ echo ../resolv.conf 1>&3
 %attr(0755,root,root)              %{_prefix}/sbin/qmail-direct
 
 %attr(644,root,root)  %config(noreplace,missingok) %{qsysconfdir}/control/defaultqueue/QMAILQUEUE
-%attr(644,root,root)  %config(noreplace,missingok) %{qsysconfdir}/control/direct_mail_users
 
 %if 0%{?suse_version} >= 1120
 %attr(644,root,root)  %config(noreplace,missingok) %{_sysconfdir}/permissions.d/indimail-mta-permissions
